--- a/src/app/products/product-add/product-add.component.html
+++ b/src/app/products/product-add/product-add.component.html
@@ -1,8 +1,7 @@
-<div class="backdrop" (click)="onCancel()"></div>
 <div class="container">
-  <div class="row">
-    <div class="col-lg-6 col-md-6 form">
-      <form class="needs-validation"[formGroup]="productForm" (ngSubmit)="submitStudentData()" novalidate>
+  <form [formGroup]="productForm" (ngSubmit)="submitStudentData()" novalidate>
+    <div class="row">
+      <div class="col-xs-12 col-md-6 col-lg-6">
         <div class="row">
           <div class="col-xs-12 col-lg-12">
             <div class="form-group">
@@ -35,15 +34,13 @@
             </div>
           </div>
         </div>
-        <div>
-          <button class="btn btn-light col-lg-5" type="submit" [disabled]="!productForm.valid">
-            Add Product
-          </button>
-        </div>
-      </form>
+      </div>
+      <div class="col-xs-12 col-md-6 col-lg-6">
+        <img [src]="image.value" class="img-responsive">
+      </div>
     </div>
-    <div class="col-lg-6 col-md-6">
-      <img [src]="image.value" class="img-responsive">
+    <div class="row">
+      <button class="btn btn-light col-6 offset-3" type="submit" [disabled]="!productForm.valid">Add Product</button>
     </div>
-  </div>
+  </form>
 </div>
