--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -1,11 +1,11 @@
-<div class="row search">
-  <div class="col-xs-12 col-md-4 col-lg-4">
+<div class="row d-flex justify-content-between">
+  <div class="col-xs-12">
     <div [(ngModel)]="filteredSearch" ngDefaultControl class="row">
       <nb-search type="rotate-layout" tag="rotate-layout" (click)="onSearch()"></nb-search>
       <input type="text" value="{{ filteredSearch }}" disabled>
     </div>
   </div>
-  <div class="col-xs-12 col-md-2 offset-md-6 col-lg-2 offset-lg-6">
+  <div class="col-xs-12">
     <nb-select placeholder="Sort By" status="basic" [(selected)]="selectedItem">
       <nb-option value="">Sort By</nb-option>
       <nb-option value="1" (click)="onLess()">From less to more</nb-option>
